feat: simplify patch
