# docs/swagger.json
@@ -54,11 +54,11 @@
                 "parameters": [
                     {
                         "description": "The dream which will be created",
-                        "name": "dreamRequestBody",
+                        "name": "postDreamRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.DreamRequestBody"
+                            "$ref": "#/definitions/v1.PostDreamRequest"
                         }
                     }
                 ],
@@ -184,12 +184,12 @@
                 ],
                 "parameters": [
                     {
-                        "description": "The dream which will be updated",
-                        "name": "dreamRequestBody",
+                        "description": "All parameters of the dream that should be updated",
+                        "name": "updateDreamRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.DreamRequestBody"
+                            "$ref": "#/definitions/v1.UpdateDreamRequest"
                         }
                     }
                 ],
@@ -530,6 +530,9 @@
                         "$ref": "#/definitions/entity.CategoryResponse"
                     }
                 },
+                "rating": {
+                    "type": "integer"
+                },
                 "visible": {
                     "type": "boolean"
                 }
@@ -569,6 +572,9 @@
                         "$ref": "#/definitions/entity.CategoryResponse"
                     }
                 },
+                "rating": {
+                    "type": "integer"
+                },
                 "visible": {
                     "type": "boolean"
                 }
@@ -599,7 +605,22 @@
                 }
             }
         },
-        "v1.DreamRequestBody": {
+        "v1.LoginRequest": {
+            "type": "object",
+            "required": [
+                "name",
+                "password"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.PostDreamRequest": {
             "type": "object",
             "required": [
                 "date"
@@ -613,18 +634,17 @@
                 }
             }
         },
-        "v1.LoginRequest": {
+        "v1.UpdateDreamRequest": {
             "type": "object",
-            "required": [
-                "name",
-                "password"
-            ],
             "properties": {
-                "name": {
+                "date": {
                     "type": "string"
                 },
-                "password": {
+                "description": {
                     "type": "string"
+                },
+                "rating": {
+                    "type": "integer"
                 }
             }
         }
